// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SystemStatusCard should not render hasLastCheckIn 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-7"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="System status title"
            class="pf-v6-c-description-list pf-m-3-col"
            data-ouia-component-id="System status title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Current state
                </span>
              </dt>
              <dd
                aria-label="Current state value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Current state value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Active
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Registered
                </span>
              </dt>
              <dd
                aria-label="Registered value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Registered value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  01 Apr 2014 00:00 UTC
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Last updated
                </span>
              </dt>
              <dd
                aria-label="Last updated value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Last updated value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  01 Jun 2014 00:00 UTC
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should not render hasRHC 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-11"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="System status title"
            class="pf-v6-c-description-list pf-m-2-col"
            data-ouia-component-id="System status title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Current state
                </span>
              </dt>
              <dd
                aria-label="Current state value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Current state value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Active
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Registered
                </span>
              </dt>
              <dd
                aria-label="Registered value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Registered value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  01 Apr 2014 00:00 UTC
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Last seen
                </span>
              </dt>
              <dd
                aria-label="Last seen value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Last seen value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  06 Mar 2025 00:00 UTC
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Last updated
                </span>
              </dt>
              <dd
                aria-label="Last updated value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Last updated value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  01 Jun 2014 00:00 UTC
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should not render hasRegistered 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-9"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="System status title"
            class="pf-v6-c-description-list pf-m-3-col"
            data-ouia-component-id="System status title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Current state
                </span>
              </dt>
              <dd
                aria-label="Current state value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Current state value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Active
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Last seen
                </span>
              </dt>
              <dd
                aria-label="Last seen value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Last seen value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  06 Mar 2025 00:00 UTC
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Last updated
                </span>
              </dt>
              <dd
                aria-label="Last updated value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Last updated value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  01 Jun 2014 00:00 UTC
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should not render hasState 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-5"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="System status title"
            class="pf-v6-c-description-list pf-m-3-col"
            data-ouia-component-id="System status title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Registered
                </span>
              </dt>
              <dd
                aria-label="Registered value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Registered value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  01 Apr 2014 00:00 UTC
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Last seen
                </span>
              </dt>
              <dd
                aria-label="Last seen value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Last seen value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  06 Mar 2025 00:00 UTC
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Last updated
                </span>
              </dt>
              <dd
                aria-label="Last updated value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Last updated value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  01 Jun 2014 00:00 UTC
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should render correctly - no data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-1"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="System status title"
            class="pf-v6-c-description-list pf-m-2-col"
            data-ouia-component-id="System status title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Current state
                </span>
              </dt>
              <dd
                aria-label="Current state value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Current state value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Registered
                </span>
              </dt>
              <dd
                aria-label="Registered value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Registered value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Last seen
                </span>
              </dt>
              <dd
                aria-label="Last seen value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Last seen value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Last updated
                </span>
              </dt>
              <dd
                aria-label="Last updated value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Last updated value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-3"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="System status title"
            class="pf-v6-c-description-list pf-m-2-col"
            data-ouia-component-id="System status title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Current state
                </span>
              </dt>
              <dd
                aria-label="Current state value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Current state value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Active
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Registered
                </span>
              </dt>
              <dd
                aria-label="Registered value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Registered value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  01 Apr 2014 00:00 UTC
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Last seen
                </span>
              </dt>
              <dd
                aria-label="Last seen value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Last seen value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  06 Mar 2025 00:00 UTC
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Last updated
                </span>
              </dt>
              <dd
                aria-label="Last updated value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Last updated value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  01 Jun 2014 00:00 UTC
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
